--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <body>
         <form onSubmit>
             <input type="text" id="email" placeholder="Email" />
-            <button onclick="window.renderOptIn" value="submit" />
+            <input type="button" onclick="window.renderOptIn" value="submit" />
         </form>
     </body>
 </html>
