--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,9 @@
                     window.gapi.surveyoptin.render({
                         "merchant_id":"MERCHANT_ID",
                         "order_id": "1",
-                        "email": "CUSTOMER_EMAIL",
-                        "delivery_country": "COUNTRY_CODE",
-                        "estimated_delivery_date": "YYYY-MM-DD",
+                        "email": "palmmarc85@gmail.com",
+                        "delivery_country": "DE",
+                        "estimated_delivery_date": new Date().toISOString().substring(0,10),
                     });
                 });
             }
