--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,17 @@
                 });
             }
         </script>
+        <!-- BEGIN GCR Language Code -->
+
+        <script>
+            window.___gcfg = {
+
+                lang: 'de'
+
+            };
+        </script>
+
+<!-- END GCR Language Code -->
     </head>
     <body>
         <form onSubmit>
