--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
                 console.log('click')
                 window.gapi.load('surveyoptin', function() {
                     window.gapi.surveyoptin.render({
-                        "merchant_id":"136160422",
+                        "merchant_id": 136160422,
                         "order_id": "1",
                         "email": "palmmarc85@gmail.com",
                         "delivery_country": "DE",
