--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Google Customer Reviews Example</title>
         <meta name="google-site-verification" content="7Sk6QYyFfDJdC5jrn_XgHz4-qcO-miGoI-cz-VcSYQA" />
-        <script src="https://apis.google.com/js/platform.js?onload=renderOptIn" async defer></script>
+        <script src="https://apis.google.com/js/platform.js" async defer></script>
         <script>
             window.renderOptIn = function() {
                 console.log('click')
