--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
             window.renderOptIn = function() {
                 console.log('click')
                 window.gapi.load('surveyoptin', function() {
-                    document.getElementById('submit').onclick = (event) => {
+                    document.getElementById('submit').on('click', (event) => {
                         console.log('hi')
                         window.gapi.surveyoptin.render({
                             "merchant_id": 136160422,
@@ -18,7 +18,7 @@
                             "delivery_country": "DE",
                             "estimated_delivery_date": new Date().toISOString().substring(0,10),
                         });
-                    }
+                    })
                 });
             }
         </script>
